# 2D_localization_alg

./: README.md  relocalization.sh  使用说明.txt  构建需求.txt
agv_urdf/: agv01.urdf
map/: relocalization.rviz
src/localization_ndt/: CMakeLists.txt  package.xml  使用说明.txt
src/localization_ndt/config/: xw_agv01.yaml
src/localization_ndt/include/localization_ndt/: initial_pose_manager.hpp  ndt_localizer_node.hpp  ndt_matcher.hpp  simple_predictor.hpp
src/localization_ndt/launch/: abtr_localization.launch  debug_localization .launch  localization.launch
src/localization_ndt/src/: initial_pose_manager.cpp  ndt_localizer_node.cpp
src/ndt_omp/: README.md
