<?xml version="1.0"?>
<package format="2">
  <name>localization_ndt</name>
  <version>0.0.1</version>
  <description>NDT-based localization node</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>ndt_omp</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>ndt_omp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export/>
</package>
